compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInKotlin/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInKotlin/source.kt:3:1: error: cannot access 'test.Super' which is a supertype of 'SubSub'. Check your module classpath for missing or conflicting dependencies.
class SubSub : Sub()
^^^^^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInKotlin/source.kt:5:22: error: cannot access 'test.Super' which is a supertype of 'SubSub'. Check your module classpath for missing or conflicting dependencies.
fun bar() = SubSub().foo()
                     ^^^
compiler/testData/compileKotlinAgainstCustomBinaries/incompleteHierarchyInKotlin/source.kt:5:22: error: unresolved reference 'foo'.
fun bar() = SubSub().foo()
                     ^^^
COMPILATION_ERROR
